--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Dois\\Log\\": "src"
+            "Dois\\Log\\": "src/"
         }
     }
 }
